--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,149 @@
         <li><a href="tel:48111111111">+48 111 111 111</a></li>
       </ul>
     </header>
-    <main></main>
+    <main>
+      <div>
+        <ul>
+          <li>
+            <button type="button">Wszystkie</button>
+          </li>
+          <li><button type="button">Strony</button></li>
+          <li><button type="button">Aplikacje</button></li>
+          <li><button type="button">Dizajn</button></li>
+          <li><button type="button">Marketing</button></li>
+        </ul>
+      </div>
+      <section>
+        <ul>
+          <li>
+            <figure>
+              <img
+                src="images/technocrack_img1.jpg"
+                alt="ekran laptopa z wizerunkiem trzech osób"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <p>Technocrak</p>
+                <p>Strona internetowa</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/golden_img2.jpg"
+                alt="mecz koszykówki walka o piłkę"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <p>Grafika New Orlean vs Golden Star</p>
+                <p>Dizajn</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/seafood_img3.jpg"
+                alt="logo restauracji z wizerunkiem ryby"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <p>Restauracja Seafood</p>
+                <p>Aplikacja</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/pprime_img4.jpg"
+                alt="czarne słuchawki nauszne"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <p>Projekt Prime</p>
+                <p>Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/pboxes_img5.jpg"
+                alt="dwa pudełka białe i szare"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <p>Projekt Boxes</p>
+                <p>Aplikacja</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/noborders_img6.jpg"
+                alt="ekran monitora z grafiką"
+                width="370"
+                height="294"
+              />
+            </figure>
+            <figcaption>
+              <p>Inspiration has no Borders</p>
+              <p>Strona Internetowa</p>
+            </figcaption>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/magazyn_img7.jpg"
+                alt="czasopismo w formie papierowej"
+                width="370"
+                height="294"
+              />
+            </figure>
+            <figcaption>
+              <p>Magazyn Limited Edition</p>
+              <p>Dizajn</p>
+            </figcaption>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/plab_img8.jpg"
+                alt="zaweszka koloru białego z nadrumiem"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <p>Projekt LAB</p>
+                <p>Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/growingb_img9.jpg"
+                alt="dłonie ułożone na klawiaturze laptopa"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <p>Growing Business</p>
+                <p>Aplikacja</p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <a href="#"><span>Web</span>Studio</a>
       <address>
