--- a/portfolio.html
+++ b/portfolio.html
@@ -5,18 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    />
+    <link rel="stylesheet" href="/goit-markup-hw-02/css/style.css" />
   </head>
   <body>
     <header>
-      <a href="#"><span>Web</span>Studio</a>
+      <a href="./index.html"
+        ><span class="web_logo">Web</span
+        ><span class="studio_logo"> Studio</span></a
+      >
       <nav>
-        <ul>
+        <ul class="navigation_links">
           <li><a href="#">Agencja</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="./portfoilo.html">Portfolio</a></li>
           <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contact_links">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:48111111111">+48 111 111 111</a></li>
       </ul>
@@ -113,11 +121,11 @@
                 width="370"
                 height="294"
               />
+              <figcaption>
+                <p>Inspiration has no Borders</p>
+                <p>Strona Internetowa</p>
+              </figcaption>
             </figure>
-            <figcaption>
-              <p>Inspiration has no Borders</p>
-              <p>Strona Internetowa</p>
-            </figcaption>
           </li>
           <li>
             <figure>
@@ -127,11 +135,11 @@
                 width="370"
                 height="294"
               />
+              <figcaption>
+                <p>Magazyn Limited Edition</p>
+                <p>Dizajn</p>
+              </figcaption>
             </figure>
-            <figcaption>
-              <p>Magazyn Limited Edition</p>
-              <p>Dizajn</p>
-            </figcaption>
           </li>
           <li>
             <figure>
@@ -165,7 +173,10 @@
       </section>
     </main>
     <footer>
-      <a href="#"><span>Web</span>Studio</a>
+      <a href="./index.html"
+        ><span class="web_studio">Web</span
+        ><span class="studio_logo"> Studio</span></a
+      >
       <address>
         <ul>
           <li>
