--- a/index.html
+++ b/index.html
@@ -5,26 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    />
+    <link rel="stylesheet" href="/goit-markup-hw-02/css/style.css" />
+    <style></style>
   </head>
 
   <body>
     <header>
-      <a href="#"><span>Web</span>Studio</a>
+      <a href="./index.html"
+        ><span class="web_logo">Web</span>
+        <span class="studio_logo">Studio</span></a
+      >
       <nav>
-        <ul>
+        <ul class="navigation_links">
           <li><a href="#">Agencja</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contact_links">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:48111111111">+48 111 111 111</a></li>
       </ul>
     </header>
 
     <main>
-      <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+      <h1 class="title_valid">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
       <button type="button">Zamów usługe</button>
       <div>
         <ul>
@@ -155,7 +164,10 @@
     </main>
 
     <footer>
-      <a href="#"><span>Web</span>Studio</a>
+      <a href="./index.html"
+        ><span class="web_logo">Web</span
+        ><span class="studio_logo"> Studio</span></a
+      >
       <address>
         <ul>
           <li>
