--- a/index.html
+++ b/index.html
@@ -38,29 +38,29 @@
       <div>
         <ul>
           <li>
-            <h3>LOREM IPSUM</h3>
+            <h3 class="title_valid_1">LOREM IPSUM</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
+            <h3 class="title_valid_1">LOREM IPSUM</h3>
+            <p class="text properties">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
+            <h3 class="title_valid_1">LOREM IPSUM</h3>
+            <p class="text_properties">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
+            <h3 class="title_valid_1">LOREM IPSUM</h3>
+            <p class="text_properties">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
@@ -68,8 +68,8 @@
         </ul>
       </div>
 
-      <section>
-        <h2>Czym się zajmujemy</h2>
+      <section class="Images_section">
+        <h2 class="title_images_section">Czym się zajmujemy</h2>
         <ul>
           <li>
             <img
@@ -100,9 +100,9 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Nasz zespół</h2>
-        <ul>
+      <section class="specialist_section">
+        <h2 class="title_specialist_section">Nasz zespół</h2>
+        <ul class="list_specialist_section">
           <li>
             <figure>
               <img
@@ -111,9 +111,9 @@
                 width="270"
                 height="260"
               />
-              <figcaption>
-                <p>John Doe</p>
-                <p>Product Desinger</p>
+              <figcaption class="caption_specialist">
+                <p class="upper_caption">John Doe</p>
+                <p class="lower_caption">Product Desinger</p>
               </figcaption>
             </figure>
           </li>
@@ -125,7 +125,7 @@
                 width="270"
                 height="260"
               />
-              <figcaption>
+              <figcaption class="caption_specialist">
                 <p>John Doe</p>
                 <p>Fronted Developer</p>
               </figcaption>
@@ -139,7 +139,7 @@
                 width="270"
                 height="260"
               />
-              <figcaption>
+              <figcaption class="caption_specialist">
                 <p>John Doe</p>
                 <p>Marketing</p>
               </figcaption>
@@ -153,7 +153,7 @@
                 width="270"
                 height="260"
               />
-              <figcaption>
+              <figcaption class="caption_specialist">
                 <p>John Doe</p>
                 <p>UI Designer</p>
               </figcaption>
