--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <body>
     <header>
       <a href="./index.html"
-        ><span class="web_logo">Web</span>
-        <span class="studio_logo">Studio</span></a
+        ><span class="web_logo_top">Web</span>
+        <span class="studio_logo_top">Studio</span></a
       >
       <nav>
         <ul class="navigation_links">
-          <li><a href="#">Agencja</a></li>
+          <li><a href="./index.html">Agencja</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="#">Kontakt</a></li>
         </ul>
@@ -126,8 +126,8 @@
                 height="260"
               />
               <figcaption class="caption_specialist">
-                <p>John Doe</p>
-                <p>Fronted Developer</p>
+                <p class="upper_caption">John Doe</p>
+                <p class="lower_caption">Fronted Developer</p>
               </figcaption>
             </figure>
           </li>
@@ -140,8 +140,8 @@
                 height="260"
               />
               <figcaption class="caption_specialist">
-                <p>John Doe</p>
-                <p>Marketing</p>
+                <p class="upper_caption">John Doe</p>
+                <p class="lower_caption">Marketing</p>
               </figcaption>
             </figure>
           </li>
@@ -154,8 +154,8 @@
                 height="260"
               />
               <figcaption class="caption_specialist">
-                <p>John Doe</p>
-                <p>UI Designer</p>
+                <p class="upper_caption">John Doe</p>
+                <p class="lower_caption">UI Designer</p>
               </figcaption>
             </figure>
           </li>
@@ -163,20 +163,26 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer_area">
       <a href="./index.html"
-        ><span class="web_logo">Web</span
-        ><span class="studio_logo"> Studio</span></a
+        ><span class="web_logo_bottom">Web</span
+        ><span class="studio_logo_bottom"> Studio</span></a
       >
       <address>
-        <ul>
+        <ul class="footer_address">
           <li>
-            <a href="https://goo.gl/maps/q3WPrfQFME7vEifA9"
+            <a class="link_address" href="https://goo.gl/maps/q3WPrfQFME7vEifA9"
               >m. Warszawa, Aleje Jerozolimskie 21</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+          <li>
+            <a class="contact_links" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a class="contact_links" href="tel:+48111111111">+48 111 111 111</a>
+          </li>
         </ul>
       </address>
     </footer>
