--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     />
     <link rel="stylesheet" href="/goit-markup-hw-02/css/style.css" />
-    <style></style>
   </head>
 
   <body>
@@ -39,14 +38,14 @@
         <ul>
           <li>
             <h3 class="title_valid_1">LOREM IPSUM</h3>
-            <p>
+            <p class="text_properties">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
             <h3 class="title_valid_1">LOREM IPSUM</h3>
-            <p class="text properties">
+            <p class="text_properties">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
