--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     </header>
     <main>
       <div>
-        <ul class="button">
+        <ul class="filters">
           <li>
             <button type="button">Wszystkie</button>
           </li>
