homework for check

--- a/portfolio.html
+++ b/portfolio.html
@@ -185,14 +185,12 @@
             >
           </li>
           <li>
-            <a class="contakct_links" href="mailto:info@example.com"
+            <a class="contact_links" href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
           <li>
-            <a class="contakct_links" href="tel:+48111111111"
-              >+48 111 111 111</a
-            >
+            <a class="contact_links" href="tel:+48111111111">+48 111 111 111</a>
           </li>
         </ul>
       </address>
